Fix: overflow관련 버그 fix

--- a/src/pages/user/layout.css
+++ b/src/pages/user/layout.css
@@ -1,10 +1,3 @@
-html,
-body {
-  margin: 0;
-  padding: 0;
-  overflow: hidden; /* 스크롤바 제거 */
-}
-
 .background-image {
   background: url("../../assets/backgrounds/startPage.png");
   background-size: cover;
